fixed issue with empty cart icon not appearing on mobile, added summary

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -103,7 +103,8 @@
         right: 100px;
     }
 
-    .cart-icon-container {
+    .cart-icon-container,
+    .empty-cart-icon-container {
         right: 60px;
         top: 15px;
     }
